# tasktree

./: .editorconfig  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  main.c  tasktree.c  tasktree.h  test.c  util.c  util.h  vcpkg.json
.cache/clangd/index/: gtk.c.11E23D4909FE2E6D.idx  main.c.8D7EACCABF90DD2A.idx  tasktree.c.9EBE4E467C39CE8F.idx  tasktree.h.003B84B3D05FB8F1.idx  util.c.5F6B0BF7F47B2D12.idx  util.h.F6D73D0F35276933.idx
src/: CMakeLists.txt  main.c  tasktree.c  tasktree.h  test.c  util.c
src/tasktree/: CMakeLists.txt  tasktree.c  tasktree.h
src/util/: CMakeLists.txt  util.c  util.h
